# sharpe-hunter

./: .gitignore  readme.txt  requirements.txt
config/: config.yml
data/snapshots/: sample_snapshot.csv
projects/ar_hmm_visual_state_explorer/: .gitignore  CHANGELOG_yfinance.md  CLEAN_BRANCH_NOTE.md  CLEAN_BRANCH_NOTE_2.md  README.md  app.py  arhmm_explorer.py  pyproject.toml  run_walk_forward.py  validation_yfinance.md  yfinance_notes.txt
projects/ar_hmm_visual_state_explorer/configs/: default.yaml
projects/ar_hmm_visual_state_explorer/data/: README.md
projects/ar_hmm_visual_state_explorer/docs/: README.md  README_yfinance.md  cli_usage.md  dashboard_usage.md  data_sources.md  dependency_note.md  final_note.md  history.md  local_reproducibility.md  model_scope.md  no_trading_rules.md  output_files.md  performance_note.md  quick_start.md  run_manager_future.md  security_data_note.md  source_selection.md  state_alignment.md  troubleshooting.md  validation.md  yahoo_finance_limitations.md  yfinance_cli_options.md  yfinance_tickers.md  yfinance_usage.md
projects/ar_hmm_visual_state_explorer/examples/: README.md  yfinance_spy_command.txt
projects/ar_hmm_visual_state_explorer/tests/: test_smoke.py
src/: backtest.py  config_loader.py  data_fetch.py  data_utils.py  dataset.py  main.py  multi_factor_backtest.py  multi_factor_config.py  multi_factor_data.py  multi_factor_factors.py  multi_factor_main.py  multi_factor_portfolio.py  multi_factor_reporting.py  multi_factor_selection.py  regression.py
