[project]
name = "ar-hmm-visual-state-explorer"
version = "0.1.0"
description = "Walk-forward AR-HMM visual explorer for return and volatility regimes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "plotly>=5.22",
    "streamlit>=1.36",
    "pyarrow>=15",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
